# django-swap-user-docs

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: main.yml
code_api/otp_forms/: index.html
code_api/otp_senders/: index.html
code_api/otp_services/: index.html
code_api/otp_views/: index.html
docs/: index.md  otp_models.md  settings.md  swap_models.md
docs/code_api/: otp_forms.md  otp_senders.md  otp_services.md  otp_views.md
docs/javascript/: custom.js
docs/stylesheets/: extra.css
otp_models/: index.html
settings/: index.html
stylesheets/: extra.css
swap_models/: index.html
