[tool.poetry]
name = "django-user-swap-docs"
version = "0.1.0"
description = ""
authors = ["Skonik <skonik@evrone.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.4"
mkdocs-video = "^1.3.0"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
django-swap-user = "^0.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
